Automatic code cleanup.
PiperOrigin-RevId: 673953961